# pywikibot-bots-FLOSSbot

./: .gitignore  .gitreview  README.rst  bootstrap  requirements.txt  setup.cfg  setup.py  tox.ini  user-config.py
FLOSSbot/: bot.py  fsd.py  license.py  main.py  plugin.py  qa.py  repository.py  util.py
FLOSSbot/families/: fsd_family.py
docker/: Dockerfile  entrypoint.sh
tests/: test_bot.py  test_fsd.py  test_license.py  test_main.py  test_plugin.py  test_qa.py  test_repository.py  test_util.py  wikidata.py
