#
# Interpreted by pbr
#   https://pypi.python.org/pypi/pbr
#   http://docs.openstack.org/developer/pbr/
#
[metadata]
name = FLOSSbot
version = 0.1.0
summary = a command-line toolbox for the wikidata FLOSS project
description-file =
    README.rst
author = Loic Dachary
author-email = loic@dachary.org
home-page = https://phabricator
classifier =
    Environment :: Console
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Operating System :: POSIX :: Linux
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Utilities

[files]
scripts = 
  bin/FLOSSbot
packages = FLOSSbot

[global]
setup-hooks =
    pbr.hooks.setup_hook
